# artifacts/api-server/src/routes/index.ts
@@ -1,5 +1,6 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import departmentsRouter from "./departments";
 import facultyRouter from "./faculty";
 import criteriaRouter from "./criteria";
 import evaluationsRouter from "./evaluations";
@@ -8,6 +9,7 @@ import resultsRouter from "./results";
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(departmentsRouter);
 router.use(facultyRouter);
 router.use(criteriaRouter);
 router.use(evaluationsRouter);
