# lib/db/src/schema/index.ts
@@ -1,1 +1,2 @@
 export * from "./faculty";
+export * from "./departments";
